--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -17,7 +17,7 @@ body {
   line-height: var(--line-height-body);
   font-synthesis: none;
   font-family: var(--font-sans);
-  font-weight: 400;
+  font-weight: var(--weight-normal);
   font-style: normal;
 }
 
@@ -82,7 +82,7 @@ main.full {
 h1,
 h2,
 h3 {
-  font-weight: 600;
+  font-weight: var(--weight-bold);
   font-style: normal;
 }
 
@@ -160,7 +160,7 @@ img {
   justify-content: center;
   padding: var(--space-s) var(--space-l);
   border-radius: 5px;
-  font-weight: 600;
+  font-weight: var(--weight-bold);
   text-decoration: none;
   gap: var(--space-xs);
   border: 3px solid transparent;
@@ -202,4 +202,13 @@ img {
     width: 1.25em;
     height: 1.25em;
   }
+}
+
+.avatar {
+  border-radius: 100%;
+  filter: grayscale(100%);
+  mix-blend-mode: luminosity;
+  transform: translate3d(0, 0, 0);
+  overflow: hidden;
+  user-select: none;
 }
