--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import { RiArrowRightLine } from "@remixicon/react";
 import type { SanityDocument } from "@sanity/client";
 import Partners from "~/components/Partners.astro";
 import PortableText from "~/components/text/PortableText.astro";
+import SupportMap from "~/components/SupportMap.astro";
 import heroIllustration from "~/pages/home/hero-form.png";
 import siteInfo from "~/data/site-info";
 import BaseLayout from "~/layouts/BaseLayout.astro";
@@ -54,6 +55,7 @@ if (!page) return Astro.redirect("/404");
         >
         <a href={siteInfo.urls.chat}>Join us on Discord</a>
       </div>
+      <SupportMap />
       <Partners />
     </div>
   </div>
