--- a/src/components/Partners.astro
+++ b/src/components/Partners.astro
@@ -43,8 +43,7 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
     width: 100%;
     max-width: 100vw;
     gap: var(--space-3xl);
-    padding-block: var(--space-xl);
-    margin-block-start: var(--space-3xl);
+    padding-block: var(--space-3xl);
 
     ul {
       --row-height: 80px;
