Default to server rendering

--- a/src/pages/brand-assets/index.astro
+++ b/src/pages/brand-assets/index.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import { RiDownloadLine } from "@remixicon/react";
 import PageHeader from "~/components/PageHeader.astro";
 import BaseLayout from "~/layouts/BaseLayout.astro";
