--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import { Image } from "astro:assets";
 import { RiArrowRightLine } from "@remixicon/react";
 import type { SanityDocument } from "@sanity/client";
