--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import { Image } from "astro:assets";
 import { RiArrowRightLine } from "@remixicon/react";
 import type { SanityDocument } from "@sanity/client";
@@ -7,7 +9,7 @@ import SupportMap from "~/components/SupportMap.astro";
 import PortableText from "~/components/text/PortableText.astro";
 import siteInfo from "~/data/site-info";
 import BaseLayout from "~/layouts/BaseLayout.astro";
-import heroIllustration from "~/pages/home/hero-form.png";
+import heroIllustration from "~/pages/home/_hero-form.png";
 import { loadQuery } from "~/sanity/lib/loadQuery";
 
 // Fetch the home page from Sanity (slug: "index" or empty slug for home)
