Update Sanity schema to include guides and categories, add new block type for faqs

--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -134,6 +134,11 @@ const showTOC = headings && headings.length > 2;
 </script>
 
 <style>
+  .toc {
+    margin-block-start: var(--space-xs);
+    padding-block-end: var(--space-l);
+  }
+
   h2 {
     font-size: var(--step-0);
   }
