--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -177,7 +177,7 @@ const headerDescription =
       scroll-margin-top: 1ex;
     }
 
-    h2 {
+    h2:not(:first-child) {
       margin-block-start: var(--space-3xl);
     }
 
