--- a/src/components/text/PortableText.astro
+++ b/src/components/text/PortableText.astro
@@ -28,7 +28,7 @@ const components = {
   },
   type: {
     blockquote: Blockquote,
-    faq: Details,
+    details: Details,
     youtube: YouTube,
     image: PortableTextImage,
     break: HorizontalRule,
